# PitchDiscrimination

./: .gitignore  AudioBasics.c  AudioBasics.h  CMakeLists.txt  LICENSE  PitchDiscrimination.c  PitchDiscrimination.h  README.md  SynthsBasic.c  SynthsBasic.h  Testing.c  waveformFunctions.c  waveformFunctions.h
